# invoices

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  config.toml  config.toml.sample  generate_manifest.py  get_data.py  get_duplicates.py  pyproject.toml  requirements-dev.txt  requirements-manifest-analysis.txt  requirements.txt  todo.md  update-reqs.sh
_docs/: data.md
docs/: 2024-03-refresh.md  data.md  examples.md
invoicedb/: __init__.py  cli.py  extract.py
invoicetool/: __init__.py  cli.py  config.py  dates_times.py  extract.py  hashes.py  invoices.py  iotools.py  log.py  word.py
legacy/: extract_text.py  find_empty.py  get_data.py  get_hashes.py
src/invoices/: __init__.py  cli.py
src/invoicetool/: cli.py  config.py  dates_times.py  iotools.py  log.py  models.py
tests/: conftest.py  test_config.py  test_invoicedb.py  test_invoices.py  test_invoicetool.py  test_iotools.py  test_ioutils.py  test_word.py
