[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "invoicetool"
version = "0.1.0"
authors = [{name = "Matthew McKenna"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = ["click"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
invoicetool = "invoicetool.cli:cli"

[tool.black]
line-length = 88
# the minimum supported Python version for Black's output
target-version = ['py311']
# use preview style for formatting
preview = true

[tool.pytest.ini_options]
minversion = "7.2.2"
# -ra:
  # -r: display a "short test summary info"
  # -a: "all except passes"
addopts = "-ra -v"
testpaths = [
    "tests",
]
