[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "invoicetool"
version = "0.1.0"
authors = [{name = "Matthew McKenna"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = ["click==8.1.3"]

[tool.setuptools]
packages = ["invoicetool"]

[project.optional-dependencies]
dev = ["coverage==7.2.2", "pytest==7.2.2", "pytest-cov==4.0.0"]

[project.scripts]
invoicetool = "invoicetool.cli:cli"

[tool.black]
line-length = 100
# the minimum supported Python version for Black's output
target-version = ['py311']
# use preview style for formatting
preview = true

[tool.coverage.html]
directory = ".out/htmlcov"

[tool.coverage.run]
source = ["invoicetool", "tests"]
omit = ["books", "docs", "legacy/*", "logs"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.pytest.ini_options]
minversion = "7.2.2"
# -ra:
  # -r: display a "short test summary info"
  # -a: "all except passes"
addopts = "-ra -v --cov-report=html --cov-report=term --cov-report=xml:.out/coverage.xml"
testpaths = [
    "tests",
]
