[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "invoicetool"
version = "0.1.0"
description="Tools for working with invoices"
readme = "README.md"
authors = [{name = "Matthew McKenna"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]

dependencies = [
    "click == 8.1.7",
    "python-docx == 1.1.0",
]

[tool.setuptools.packages.find]
include = ["invoicetool"]

[project.optional-dependencies]
dev = [
    # "coverage == 7.2.2",
    "pytest == 8.1.1",
    "ruff == 0.3.3"
    # "pytest-cov == 4.0.0"
]
manifest-analysis = [
    "jupyterlab == 4.1.5",
    "pandas == 2.2.1",
    "pyarrow == 15.0.2",
]

[project.scripts]
invoicetool = "invoicetool.cli:cli"


# [tool.coverage.html]
# directory = ".out/htmlcov"

# [tool.coverage.run]
# source = ["invoicetool", "tests"]
# omit = ["data", "docs", "legacy", "logs"]

# [tool.coverage.report]
# show_missing = true
# fail_under = 80

[tool.pytest.ini_options]
# minversion = "8.0.1"
# -ra:
# -r: display a "short test summary info"
# -a: "all except passes"
# addopts = "-ra -v --cov-report=html --cov-report=term --cov-report=xml:.out/coverage.xml"
addopts = "-ra -v"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
